# PDF

./: .gitignore  .pylintrc  LICENSE  README.md  README_zh-CN.md  create_test_pdf.py  package.oo.yaml  pyproject.toml  requirements.txt  test_compress_directly.py  workspace.oo.yaml
.claude/: settings.local.json
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/markdown-to-pdf/: flow.oo.yaml
flows/merge-images-into-pdf/: .flow.ui.oo.json  flow.oo.yaml
flows/pdf-to-images/: flow.oo.yaml
flows/read-pdf-meta/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
flows/test_advanced_tasks/: .flow.ui.oo.json  flow.oo.yaml
flows/test_all_tasks/: .flow.ui.oo.json  flow.oo.yaml
flows/test_basic_tasks/: .flow.ui.oo.json  flow.oo.yaml
flows/test_final_tasks/: .flow.ui.oo.json  flow.oo.yaml
flows/test_images2pdf/: .flow.ui.oo.json  flow.oo.yaml
flows/test_pdf2meta/: .flow.ui.oo.json  flow.oo.yaml
flows/test_pdf_compress/: .flow.ui.oo.json  flow.oo.yaml
flows/test_watermark_bg/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/html_to_pdf/: __init__.py  task.oo.yaml
tasks/image2pdf/: main.py  task.oo.yaml
tasks/images2pdf/: __init__.py  main.py  task.oo.yaml
tasks/pdf2images/: __init__.py  task.oo.yaml
tasks/pdf2meta/: __init__.py  task.oo.yaml
tasks/pdf_annotate/: __init__.py  task.oo.yaml
tasks/pdf_compress/: __init__.py  task.oo.yaml
tasks/pdf_decrypt/: __init__.py  task.oo.yaml
tasks/pdf_delete_pages/: __init__.py  task.oo.yaml
tasks/pdf_encrypt/: __init__.py  task.oo.yaml
(+14 files in other folders)
