[project]
name = "pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pillow (==10.4.0)",
    "pypdf2 (==3.0.1)",
    "pdf2image (==1.17.0)",
    "pypdf (==5.0.1)",
    "reportlab (==4.2.5)",
    "pdfplumber (==0.11.4)",
    "pytesseract (==0.3.13)",
    "weasyprint (==62.3)",
    "wand (==0.6.13)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
